--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -19,9 +19,10 @@ test_ignore = test_embedded
 
 [env:esp32dev]
 platform = espressif32
-board = esp32doit-devkit-v1
+board = esp32dev
 framework = arduino
 test_ignore = test_native
+upload_speed = 115200
 monitor_speed = 115200
 lib_deps = 
 	https://github.com/mrfaptastic/ESP32-HUB75-MatrixPanel-I2S-DMA.git
